--- a/plugin.xml
+++ b/plugin.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <plugin id="cordova-plugin-hms-push" 
         version="1.0.0" 
         xmlns="http://apache.org/cordova/ns/plugins/1.0" 
