--- a/plugin.xml
+++ b/plugin.xml
@@ -23,12 +23,12 @@
 		<hook type="before_plugin_uninstall" src="hooks/before_plugin_uninstall.js" />
         <hook type="after_prepare" src="hooks/after_prepare.js" />
 
-		<config-file target="AndroidManifest.xml" parent="/*">
+		<config-file target="AndroidManifest.xml" parent="/manifest">
 			<uses-permission android:name="android.permission.INTERNET" />
 			<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 			<uses-permission android:name="android.permission.WAKE_LOCK" />
 		</config-file>
-        <config-file target="AndroidManifest.xml" parent="application">
+        <config-file target="AndroidManifest.xml" parent="/manifest/application">
 			<!-- <service android:enabled="true" android:exported="false" android:name="com.google.android.gms.measurement.AppMeasurementService" /> -->
 			<!-- <service android:name="com.huawei.cordova.hms.push.CordovaHmsMessageService"> -->
 				<!-- <intent-filter> -->
