--- a/plugin.xml
+++ b/plugin.xml
@@ -18,42 +18,29 @@
     </js-module>
 
     <platform name="android">
-
         <hook type="after_plugin_install" src="hooks/after_plugin_install.js" />
-		<hook type="before_plugin_uninstall" src="hooks/before_plugin_uninstall.js" />
+	<hook type="before_plugin_uninstall" src="hooks/before_plugin_uninstall.js" />
         <hook type="after_prepare" src="hooks/after_prepare.js" />
-
-		<config-file target="AndroidManifest.xml" parent="/manifest">
-			<uses-permission android:name="android.permission.INTERNET" />
-			<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-			<uses-permission android:name="android.permission.WAKE_LOCK" />
-		</config-file>
-        <config-file target="AndroidManifest.xml" parent="/manifest/application">
-			<!-- <service android:enabled="true" android:exported="false" android:name="com.google.android.gms.measurement.AppMeasurementService" /> -->
-			<!-- <service android:name="com.huawei.cordova.hms.push.CordovaHmsMessageService"> -->
-				<!-- <intent-filter> -->
-					<!-- <action android:name="com.google.firebase.MESSAGING_EVENT"/> -->
-                    <!-- <action android:name="com.huawei.android.push.intent.REGISTRATION"/> -->
-				<!-- </intent-filter> -->
-			<!-- </service> -->
+	<config-file target="res/xml/config.xml" parent="/*">
+            <feature name="HMSPush">
+                <param name="android-package" value="com.huawei.cordova.hms.push.HMSPush" />
+            </feature>
+        </config-file>
+	<config-file target="AndroidManifest.xml" parent="/manifest">
+		<uses-permission android:name="android.permission.INTERNET" />
+		<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+		<uses-permission android:name="android.permission.WAKE_LOCK" />
+	</config-file>
+        <config-file target="AndroidManifest.xml" parent="/manifest/application">	
             <service android:name="com.huawei.cordova.hms.push.CordovaHmsMessageService" android:exported="true">
                 <intent-filter>
                     <action android:name="com.huawei.push.action.MESSAGING_EVENT" />
                 </intent-filter>
             </service>
-			<!-- <receiver android:name="org.apache.cordova.firebase.OnNotificationOpenReceiver"/> -->
         </config-file>
 
       <framework src="com.huawei.hms:push:4.0.2.300" />
-      <framework src="resources/plugin.gradle" custom="true" type="gradleReference"/>
-    
-
-        <config-file target="config.xml" parent="/*">
-            <feature name="HMSPush">
-                <param name="android-package" value="com.huawei.cordova.hms.push.HMSPush" />
-            </feature>
-        </config-file>
-        
+      <framework src="resources/plugin.gradle" custom="true" type="gradleReference"/>        
 
         <source-file src="src/main/java/com/huawei/cordova/hms/push/HMSPush.java" target-dir="src/com/huawei/cordova/hms/push" />
         <source-file src="src/main/java/com/huawei/cordova/hms/push/Constants.java" target-dir="src/com/huawei/cordova/hms/push" />
