--- a/plugin.xml
+++ b/plugin.xml
@@ -32,7 +32,7 @@
 		<uses-permission android:name="android.permission.WAKE_LOCK" />
 	</config-file>
         <config-file target="AndroidManifest.xml" parent="/manifest/application">	
-            <service android:name="com.huawei.cordova.hms.push.CordovaHmsMessageService" android:exported="true">
+            <service android:name="com.huawei.cordova.hms.push.CordovaHmsMessageService" android:exported="false">
                 <intent-filter>
                     <action android:name="com.huawei.push.action.MESSAGING_EVENT" />
                 </intent-filter>
@@ -40,6 +40,7 @@
         </config-file>
 
       <framework src="com.huawei.hms:push:4.0.2.300" />
+      <framework src="androidx.appcompat:appcompat:1.0.2" />
       <framework src="resources/plugin.gradle" custom="true" type="gradleReference"/>        
 
         <source-file src="src/main/java/com/huawei/cordova/hms/push/HMSPush.java" target-dir="src/com/huawei/cordova/hms/push" />
